[package]
name = "pancakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_macro_rules = { path = "../vec_macro_rules" }
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hello_macro_derive" }
hello_macro_attribute = { path = "../hello_macro_attribute" }
hello_macro_fn = { path = "../hello_macro_fn" }
